# docker

./: CMakeLists.txt  Dockerfile.cpp  README.md  docker-compose.yml  main  populate_real_data.sh  run_project.sh  setup.sh
MVC/: Dockerfile.js  app.js  package-lock.json  package.json
MVC/controllers/: category.js  movie.js  token.js  user.js
MVC/middleware/:  auth.js  upload.js  uploadMovie.js  uploadVideo.js
MVC/models/: category.js  movie.js  user.js
MVC/routes/: category.js  movie.js  token.js  user.js
MVC/services/: category.js  movie.js  user.js
data/: watched_movies.txt
src/: AddWatchedMoviesCommand.cpp  App.cpp  ConsoleMenu.cpp  DeleteCommand.cpp  HelpCommand.cpp  PatchMoviesCommand.cpp  RecommendCommand.cpp  TCPclient.py  TCPserver.cpp  UserManager.cpp  main.cpp
src/include/: AddWatchedMoviesCommand.hpp  App.hpp  ConsoleMenu.hpp  DeleteCommand.hpp  HelpCommand.hpp  ICommand.hpp  IMenu.hpp  PatchMoviesCommand.hpp  RecommendCommand.hpp  TCPserver.hpp  UserManager.hpp
tests/: AddWatchedMoviesCommandTest.cpp  ConsoleMenuTest.cpp  DeleteCommandTest.cpp  HelpCommandTest.cpp  PatchMoviesCommandTest.cpp  RecommendCommandTest.cpp
